# sphinx-docdash-pdf-theme-default-dev

./: MANIFEST.in  README.md  install-pi.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
.pi/: models.json.example  searxng.json  settings.json
docdash_pdf_theme/: AGENTS.md  __init__.py  default_config.py  preamble.tex  preamble.tex_t  utils.py
docdash_pdf_theme/latex_styles/: floating.tex_t
docdash_pdf_theme/latex_styles/admonition/: default.tex_t  note.tex_t
docdash_pdf_theme/latex_styles/container_title_style/: classic.tex_t  ribbon.tex_t
docdash_pdf_theme/latex_styles/need/: default.tex_t
docdash_pdf_theme/latex_styles/title_page/: default.tex_t
